[package]
name = "rcan"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Really simple user Controlled Authorization Networks"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
repository = "https://github.com/dignifiedquire/rcan"

rust-version = "1.81"

[dependencies]
anyhow = "1.0.95"
blake3 = "1.5.5"
derive_more = { version = "1.0.0", features = ["debug", "display"] }
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
hex = "0.4.3"
postcard = { version = "1.1.1", features = ["use-std"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
ssh-encoding = { version = "0.2.0", features = ["pem", "std"], optional = true }
tokio = { version = "1", optional = true, features = ["fs"] }

[dev-dependencies]
bitfields = "0.12.4"
rand_chacha = "0.3.1"
testresult = "0.4.1"

[features]
default = []
fs = ["pem", "dep:tokio"]
pem = ["dep:ssh-encoding"]
